<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customers"
            android:title="@string/nav_customers"
            android:icon="@drawable/clientes"
            android:checkable="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_jobs"
            android:title="@string/nav_jobs"
            android:icon="@drawable/trabajos"
            android:checkable="true"
            app:showAsAction="never" />


        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"
            android:icon="@drawable/perfil"
            android:checkable="true"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout"
        android:icon="@drawable/cerrar_sesion"
        app:showAsAction="never" />
</menu>