<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtDetailDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_dni_placeholder"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name_placeholder"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtDetailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_placeholder"
        android:textSize="18sp"/>
</LinearLayout>
