<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewJobId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_job_id"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_status"
            android:textColor="@color/hint_gray"
            android:layout_marginTop="4dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewLicensePlate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_license_plate"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewDniCustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_customer_dni"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>


