<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/jobIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/iconos_reparacion_peque_bicolor"
            android:contentDescription="@string/icon_job"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextLicensePlate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_license_plate"
            android:inputType="textCapCharacters"
            app:layout_constraintTop_toBottomOf="@id/jobIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/searchCarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comprobación de matrícula"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/search_32dp_lupa_negro_md"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/editTextLicensePlate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewCarInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_car_info"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/searchCarButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_job_description"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/textViewCarInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/labelStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_start_date"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text=""
            android:drawableLeft="@drawable/calendar_month_32_negro"
            app:layout_constraintTop_toTopOf="@id/labelStartDate"
            app:layout_constraintBottom_toBottomOf="@id/labelStartDate"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:focusable="false"
            android:clickable="false" />

        <TextView
            android:id="@+id/labelEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_end_date"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/labelStartDate"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/endDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text=""
            android:drawableLeft="@drawable/calendar_month_32_negro"
            app:layout_constraintTop_toTopOf="@id/labelEndDate"
            app:layout_constraintBottom_toBottomOf="@id/labelEndDate"
            app:layout_constraintEnd_toEndOf="parent" />
        <EditText
            android:id="@+id/editTextEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:focusable="false"
            android:clickable="false" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:prompt="@string/hint_status"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/labelEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/editTextComments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_comments"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/spinnerStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageViewJob"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:background="#CCCCCC"
            app:layout_constraintTop_toBottomOf="@id/editTextComments"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_upload_image"
            android:drawableRight="@drawable/add_photo_alternate_32_negro"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/imageViewJob"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tasks"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/btnSelectImage"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scrollViewTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/layoutTaskNewJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
<!--
        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_add_task"
            android:drawableLeft="@drawable/check_circle_32_negro"
            android:background="@android:color/transparent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/scrollViewTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />-->

        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_task"
            android:drawableLeft="@drawable/add_circle_32_negro"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:drawablePadding="8dp"
            android:padding="0dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            app:layout_constraintTop_toBottomOf="@id/scrollViewTask"
            app:layout_constraintStart_toStartOf="parent" />


        <!--
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save_job"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/yellow_cartaller"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/addTaskButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />-->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save_job"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:drawablePadding="8dp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/addTaskButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <Button
            android:id="@+id/modifyJobButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save_update_job"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/yellow_cartaller"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>





